--- a/music-app/src/CSS/grid.scss
+++ b/music-app/src/CSS/grid.scss
@@ -287,13 +287,25 @@
             position: relative;
             width:50%;
             left: 50%;
-
         }
     }
 
 }
 /* PC medium resolution */
 @media (min-width: 992px) and (max-width: 1199px){
+
+    .player__box--controls{
+        i:not(:first-child){
+            margin-left: 2.5rem;
+        }
+    }
+    .album {
+        img{
+            width:100%;
+            left: 0;
+        }
+    }
+
     .grid.wide{
         max-width: 970px;
         margin: 0 auto;
@@ -433,6 +445,20 @@
 }
 /* PC low resolution */
 @media (min-width: 1200px){
+
+    .player__box--controls{
+        i:not(:first-child){
+            margin-left: 2.5rem;
+        }
+    }
+    .album {
+        img{
+            width:100%;
+            left: 0;
+        }
+    }
+
+
     .grid.wide{
         max-width: 1140px;
         margin: 0 auto;
